--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 /.idea/
 /venv/
 /.vscode/
-/src/*/__pycache__/
+/src/client/__pycache__/
+/src/common/__pycache__/
+/src/gui/__pycache__/
+/src/server/__pycache__/
+/src/test/__pycache__/
